@@ -1,5 +1,11 @@
 2021-12-08  Mark Wielaard  <mark@klomp.org>
 
+	* link_map.c (dwfl_link_map_report): Limit malloc size to max
+	possible. When converting make sure we don't exceed the number
+	of bytes available in either in.d_buf nor out.d_buf.
+
+2021-12-08  Mark Wielaard  <mark@klomp.org>
+
 	* dwfl_segment_report_module.c (dwfl_segment_report_module): Don't
 	read beyond of (actual) end of (memory) file.
 
